--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <div id="lead-content">
             <h1>Gary L. Schellhas, Jr.</h1>
             <h2>Audio Visual Control Developer</h2>
+            <!--
             <a href="#" class="btn-rounded-white">Download Resume</a>
+            -->
         </div>
         <!-- End #lead-content -->
 
@@ -73,9 +75,12 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        I am a person that has excellent written, verbal and telephone communication skills.I am able to think outside the box to complete a complex problem,
+                         and am able to adapt to varied work assignments, multiple projects, and interruptions.  I am well aquinted with traveling all over the world for business.  
+                         I have made it from California to NJ, as well as Germany, England, Turkey, South Korea, and Japan.   I am skilled in multi-tasking, and extremely organized, 
+                         quality conscience and accurate with high personal work ethic.  I consider myself to be detail oriented, self driven, career oriented, motivated, loyal, dependable
+                         and dedicated.  I am a self starter who requires minimal supervision.I learn quick, am open to new ideas and concepts.I am a problem solver, as well as a multi-dimensional
+                         and dynamic thinker.  People consider me to be a team player, team leader, and team builder.  I can handle stressful situations, in a professional manner.
                     </p>
                 </div>
             </div>
