Updating About Me

--- a/index.html
+++ b/index.html
@@ -91,27 +91,27 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="February 2019 – Current">
+                <h3>IMS Technology Services</h3>
+                <h4>"Quality Assurance Manager"</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Responsibilities: Manage Field Engineering and Programming team. Create and oversee Programming best practices. Develop, maintain, and implement standards across all facets of the commissioning process. Influence company practices and direction.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="August 2016 - February 2019">
+                <h3>IMS Technology Services</h3>
+                <h4>Director of Programming</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Responsibilities Included: Planning, and developing Proactive Managed Services Offering, Review team code, creating and overseeing standard code practices. Top 20% code completion and implementation. Design services for sales engineering and systems engineering team.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="December 2012 – August 2016">
+                <h3>IMS Technology Services</h3>
+                <h4>Sr. Field Engineer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        Field support configuring all necessary equipment with regards to audio, video, UC infrastructure, BYOD (Bring Your Own Device), and sepcialty equipmnet.  Field updates to Crestron, and Extron control systems.  Level 3 support issue resolution and documentation.  Direct customer relations
                 </p>
             </div>
         </div>
