Updating Education Information

--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
                         Field support configuring all necessary equipment with regards to audio, video, UC infrastructure, BYOD (Bring Your Own Device), and sepcialty equipmnet.  Field updates to Crestron, and Extron control systems.  Level 3 support issue resolution and documentation.  Direct customer relations
                 </p>
             </div>
+
+            <div data-date="September 2010 – June 2012">
+                    <h3>DFXSoundVision</h3>
+                    <h4>Sr. Automation Programmer</h4>
+                    <p>
+                        Managed pre-installation, installation, and post-installation.  Created schedules, and planning procedures.  Worked with purchasing and sales to create delivery deadlines.  Worked with in-house prep team to create package to be delivered to on-site installation team.  Managed on-site installation until completion and sign off.  Managed Installation of Screens, Projectors, LCD's, Speakers, Intelligent Lighting Fixtures, Architectural Lighting Fixtures, LED Lighting Fixtures.                    </p>
+                </div>
         </div>
     </div>
     <!-- End #experience -->
@@ -121,32 +128,15 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Camden County Community Collete</h3>
+            <span class="education-date">September 2007 - May 2010</span>
+            <h4>Associates of Science in Computer System Technologies</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Configuration of Windows and Linux based systems, Virtual Environments, and a focus on programming in C++.
             </p>
         </div>
         <!-- End .education-block -->
 
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
-        </div>
-        <!-- End .education-block -->
     </div>
     <!-- End #education -->
 
