--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
     </div>
     <!-- End #education -->
-
+    <!-- Projects -->
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
@@ -178,37 +178,28 @@
             </div>
         </div>
     </div>
-    <!-- End #projects -->
+    <!-- #projects -->
 
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
             <li>Node.js</li>
             <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
             <li>C#</li>
             <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Powershell</li>
+            <li>Simpl+</li>
+            <li>Simpl#</li>
+            <li>Simpl#Pro</li>
+            <li>Lua</li>
+            <li>CSS</li>
+            <li>HTML5</li>
+            <li>Excel</li>
+            <li>BiAmp</li>
+            <li>Q-SYS</li>
+            <li>Soundweb London</li>
         </ul>
     </div>
     <!-- End #skills -->
