Fixing Spelling Mistakes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div id="experience-timeline">
             <div data-date="February 2019 – Current">
                 <h3>IMS Technology Services</h3>
-                <h4>"Quality Assurance Manager"</h4>
+                <h4>Quality Assurance Manager</h4>
                 <p>
                     Responsibilities: Manage Field Engineering and Programming team. Create and oversee Programming best practices. Develop, maintain, and implement standards across all facets of the commissioning process. Influence company practices and direction.
                 </p>
@@ -128,11 +128,11 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>Camden County Community Collete</h3>
+            <h3>Camden County Community College</h3>
             <span class="education-date">September 2007 - May 2010</span>
             <h4>Associates of Science in Computer System Technologies</h4>
             <p>
-                    Configuration of Windows and Linux based systems, Virtual Environments, and a focus on programming in C++.
+                    Configuration of Windows and Linux based systems, Virtual Environments, and a focus on programming in C++
             </p>
         </div>
         <!-- End .education-block -->
