Updating Profile Image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <img src="https://media.licdn.com/dms/image/C4E03AQFvmRWJeDvJ1g/profile-displayphoto-shrink_200_200/0?e=1560384000&v=beta&t=rCNPOqxlII1g_T5FGOrFemovaWJOMCNcxibFGwD-3jU>">
+            <img src="https://media.licdn.com/dms/image/C4E03AQFvmRWJeDvJ1g/profile-displayphoto-shrink_200_200/0?e=1560384000&v=beta&t=rCNPOqxlII1g_T5FGOrFemovaWJOMCNcxibFGwD-3jU">
             <h1>Gary L. Schellhas, Jr.</h1>
             <h2>Audio Visual Control Developer</h2>
             <!--
